# -Rh-automa-o-

./: .env.example  .gitignore  ACESSO-E-CONHECIMENTO.md  AGENTE-TOOLS-E-WS.md  APP-DESKTOP.md  ARQUITETURA-INTEGRACAO.md  ARQUITETURA-TEMPO-REAL.md  ARRANQUE.md  ASSISTENTE-CONVERSA.md  ASSISTENTE-PESSOAL.md  ASSISTENTE-PROATIVO.md  AUDITORIA-360-OVERNIGHT.md  AUTENTICACAO.md  AUTH-CONTRACT.md  BRAIN.md  BUILD-LOG.md  BUILD-READY.md  CAMADA-CONHECIMENTO.md  DATA-RETENTION.md  DECISOES-ABERTAS.md  DECISOES-E-MVP.md  DESIGN-TOKENS.md  DIA-A-DIA-RECRUTADOR.md  ESCALA-E-OPERACAO.md  FASE-3-ARRANQUE.md  FILOSOFIA-DAS-PERGUNTAS.md  INFRA-E-MIGRACAO.md  INTAKE-E-JULGAMENTO.md  JORNADA-POS-PARECER.md  KEYS-TODO.md  LEGAL-E-RGPD.md  MODELO-DADOS.md  MODELOS-E-API.md  PLANO-CONCLUSAO-V1.md  PLANO-CONSTRUCAO.md  PLANO.md  PROMPT-CHATGPT-REVIEW.md  PROMPT-FASE-3-LOOP.md  README.md  RELATORIO-CLIENTE.md  (+20 more)
.github/workflows/: ci.yml
apps/desktop/: .env.example  IRIS-desktop.cmd  build.mjs  electron-builder.yml  package.json  serve-overlay.mjs  tsconfig.json
apps/desktop/src/: globals.d.ts  index.ts
apps/desktop/test/: action.test.ts  audioCapture.test.ts  format.test.ts  hardening.test.ts  hud.test.tsx  (+5 more)
apps/realtime/: package.json
apps/web/: instrumentation.ts  middleware.ts  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/ws/: package.json
infra/supabase/: kong.yml
services/agent/: README.md  pyproject.toml
services/agent/app/: main.py  models.py  routes.py
services/agent/tests/: test_health.py
services/face/: README.md  pyproject.toml
(+267 files in other folders)
